--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -16,5 +16,10 @@
     justify-content: space-between;
 }
 .footer3{
-    align-self: flex-start;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    color: #667885;
+
 }
