--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -23,3 +23,13 @@
     color: #667885;
 
 }
+
+@media(max-width: 800px){
+    .footer2{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+    
+}
