--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -6,21 +6,48 @@
     padding: 10px;
     right: 200px;
     display: flex;
-    justify-content: end;
     border-radius: 50%;
     border: 1.0px dashed #9BA2B3;
 }
+.icons{
+    position: absolute;    
+    top: 50px;
+    padding: 30px;
+    right: 200px;
+    display: flex;
+    border-radius: 50%;
+    border: 1.0px dashed #9BA2B3;
+}
+@media(max-width: 1200px){
+    .icon{
+        display: none;
+        
+    }
+    
+}
 
-#profile_img{
+@media(min-width: 100px){
+    .icons{
+        transform: translateX(130%);
+    }
+}
+
+@media(min-width: 1200px){
+    .icons{
+        display: none;
+    }
+}
+
+
+.profile_img{
     align-items: center;
     margin: 20px;
     display: flex;
     justify-content: center;
-    align-items: center;
     padding: 10px 0 0 0;
     height: 88px;
 }
-#twitter{
+.twitter{
 font-family: 'Inter';
 font-style: normal;
 font-weight: 700;
